# spine-opengl

./: .gitignore  README.md
Android/: settings.gradle
Android/app/: build.gradle
Android/app/src/androidTest/java/com/github/keith2018/animation/spine/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Android/app/src/main/java/com/github/keith2018/animation/spine/: GLProducerThread.java  GLRendererImpl.java  MainActivity.java
Android/app/src/main/res/layout/: activity_main.xml
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/app/src/main/res/values-night/: themes.xml
Android/app/src/test/java/com/github/keith2018/animation/spine/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
Mac/: CMakeLists.txt  SpineGLContext.cpp  SpineGLContext.h  main.cpp
iOS/Spine iOS/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
iOS/Spine iOS.xcodeproj/: project.pbxproj
render/: CMakeLists.txt  GLBatchRender.cpp  GLBatchRender.h  SkeletonDrawable.cpp  SkeletonDrawable.h  SpineController.cpp  SpineController.h
render/utils/: Logger.h
spine-cpp/spine-cpp-unit-tests/: CMakeLists.txt
